--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         .input-section {
             display: flex;
             gap: 10px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             flex-wrap: wrap;
         }
 
@@ -96,6 +96,16 @@
             background-color: #2980b9;
         }
 
+        /* Daily Task Checkbox */
+        .daily-task {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            font-size: 14px;
+            color: #2c3e50;
+            margin-bottom: 20px;
+        }
+
         /* Filter Section */
         .filter-section {
             display: flex;
@@ -123,6 +133,49 @@
             border-color: #3498db;
             outline: none;
             background-color: #ffffff;
+        }
+
+        /* Show Report Button */
+        .report-section {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        .report-section button {
+            padding: 10px 15px;
+            background-color: #2ecc71;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            font-size: 14px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .report-section button:hover {
+            background-color: #27ae60;
+        }
+
+        /* Report Display */
+        .report-display {
+            display: none;
+            background-color: #ecf0f1;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+
+        .report-display h2 {
+            font-size: 18px;
+            margin-bottom: 10px;
+            color: #34495e;
+        }
+
+        .report-display p {
+            font-size: 14px;
+            margin-bottom: 5px;
+            color: #2c3e50;
         }
 
         /* Task List */
@@ -231,6 +284,17 @@
             background-color: #f5b7b1;
         }
 
+        /* Daily Task Indicator */
+        .daily-indicator {
+            display: inline-block;
+            background-color: #2ecc71;
+            color: #ffffff;
+            padding: 2px 6px;
+            border-radius: 3px;
+            font-size: 10px;
+            margin-left: 5px;
+        }
+
         /* Responsive Design */
         @media (max-width: 600px) {
             .input-section {
@@ -247,6 +311,10 @@
             }
 
             .filter-section select {
+                width: 100%;
+            }
+
+            .report-section {
                 width: 100%;
             }
 
@@ -284,6 +352,10 @@
             <input type="text" id="taskInput" placeholder="Enter a new task">
             <button onclick="addTask()">Add Task</button>
         </div>
+        <div class="daily-task">
+            <input type="checkbox" id="dailyTaskCheckbox">
+            <label for="dailyTaskCheckbox">Mark as Daily Task</label>
+        </div>
         <div class="filter-section">
             <label for="filterSelect">Filter:</label>
             <select id="filterSelect" onchange="renderTasks()">
@@ -292,12 +364,21 @@
                 <option value="pending">Pending</option>
             </select>
         </div>
+        <div class="report-section">
+            <button onclick="showReport()">Show Report</button>
+        </div>
+        <div class="report-display" id="reportDisplay">
+            <h2>Task Report</h2>
+            <p id="completedCount">Completed Tasks: 0</p>
+            <p id="pendingCount">Pending Tasks: 0</p>
+        </div>
         <ul id="taskList"></ul>
     </div>
 
     <script>
         // Initialize tasks array from localStorage or empty
         let tasks = JSON.parse(localStorage.getItem('tasks')) || [];
+        let lastResetDate = localStorage.getItem('lastResetDate') || '';
 
         // Array of motivational quotes
         const quotes = [
@@ -328,9 +409,26 @@
             }, 500);
         }
 
-        // Call displayQuote on page load
+        // Function to reset daily tasks if a new day has started
+        function resetDailyTasks() {
+            const todayDate = new Date().toDateString();
+            if (lastResetDate !== todayDate) {
+                tasks = tasks.map(task => {
+                    if (task.daily && task.completed) {
+                        return { ...task, completed: false };
+                    }
+                    return task;
+                });
+                lastResetDate = todayDate;
+                localStorage.setItem('tasks', JSON.stringify(tasks));
+                localStorage.setItem('lastResetDate', lastResetDate);
+            }
+        }
+
+        // Call displayQuote and resetDailyTasks on page load
         window.onload = function() {
             displayQuote();
+            resetDailyTasks();
             renderTasks();
         }
 
@@ -342,17 +440,29 @@
         // Function to add a new task
         function addTask() {
             const taskInput = document.getElementById("taskInput");
+            const dailyTaskCheckbox = document.getElementById("dailyTaskCheckbox");
             const taskText = taskInput.value.trim();
+            const isDaily = dailyTaskCheckbox.checked;
 
             if (taskText === "") {
                 alert("Please enter a task.");
                 return;
             }
 
+            // Check for duplicate daily tasks
+            if (isDaily) {
+                const duplicate = tasks.some(task => task.text.toLowerCase() === taskText.toLowerCase() && task.daily);
+                if (duplicate) {
+                    alert("This daily task already exists.");
+                    return;
+                }
+            }
+
             const task = {
                 id: Date.now(),
                 text: taskText,
                 completed: false,
+                daily: isDaily,
                 createdAt: new Date().toLocaleString()
             };
 
@@ -360,15 +470,14 @@
             saveTasks();
             renderTasks();
             taskInput.value = "";
+            dailyTaskCheckbox.checked = false;
         }
 
-        // Function to delete a task
+        // Function to delete a task without confirmation
         function deleteTask(id) {
-            if (confirm("Are you sure you want to delete this task?")) {
-                tasks = tasks.filter(task => task.id !== id);
-                saveTasks();
-                renderTasks();
-            }
+            tasks = tasks.filter(task => task.id !== id);
+            saveTasks();
+            renderTasks();
         }
 
         // Function to toggle task completion
@@ -395,6 +504,16 @@
                     alert("Task cannot be empty.");
                     return;
                 }
+
+                // If the task is daily, check for duplicates
+                if (task.daily) {
+                    const duplicate = tasks.some(t => t.text.toLowerCase() === trimmedText.toLowerCase() && t.daily && t.id !== id);
+                    if (duplicate) {
+                        alert("A daily task with this name already exists.");
+                        return;
+                    }
+                }
+
                 tasks = tasks.map(task => {
                     if (task.id === id) {
                         return { ...task, text: trimmedText };
@@ -416,7 +535,7 @@
             // Sort tasks by creation date (newest first)
             const sortedTasks = tasks.sort((a, b) => b.id - a.id);
 
-            sortedTasks.forEach((task, index) => {
+            sortedTasks.forEach((task) => {
                 // Apply filters
                 if (filter === "completed" && !task.completed) return;
                 if (filter === "pending" && task.completed) return;
@@ -443,6 +562,13 @@
                 const taskText = document.createElement("span");
                 taskText.className = "task-text";
                 taskText.textContent = task.text;
+
+                if (task.daily) {
+                    const dailyIndicator = document.createElement("span");
+                    dailyIndicator.className = "daily-indicator";
+                    dailyIndicator.textContent = "Daily";
+                    taskText.appendChild(dailyIndicator);
+                }
 
                 const taskMeta = document.createElement("span");
                 taskMeta.className = "task-meta";
@@ -478,6 +604,42 @@
 
                 taskList.appendChild(li);
             });
+        }
+
+        // Function to show report
+        function showReport() {
+            const reportDisplay = document.getElementById("reportDisplay");
+            const completedCount = tasks.filter(task => task.completed).length;
+            const pendingCount = tasks.filter(task => !task.completed).length;
+
+            document.getElementById("completedCount").textContent = `Completed Tasks: ${completedCount}`;
+            document.getElementById("pendingCount").textContent = `Pending Tasks: ${pendingCount}`;
+
+            // Toggle visibility
+            if (reportDisplay.style.display === "none" || reportDisplay.style.display === "") {
+                reportDisplay.style.display = "block";
+            } else {
+                reportDisplay.style.display = "none";
+            }
+        }
+
+        // Function to reset daily tasks at midnight if the app is open
+        function scheduleDailyReset() {
+            const now = new Date();
+            const millisTillMidnight = new Date(now.getFullYear(), now.getMonth(), now.getDate() + 1, 0, 0, 0, 0) - now;
+            setTimeout(() => {
+                resetDailyTasks();
+                renderTasks();
+                scheduleDailyReset(); // Schedule next reset
+            }, millisTillMidnight);
+        }
+
+        // Call scheduleDailyReset on page load
+        window.onload = function() {
+            displayQuote();
+            resetDailyTasks();
+            renderTasks();
+            scheduleDailyReset();
         }
 
         // Optional: Add task on Enter key press
